--- a/iDoctor_vue/index.html
+++ b/iDoctor_vue/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.css" rel="stylesheet">
-    <title>idoctor_vue</title>
+    <link rel="icon" type="image/png" href="static/logo.png">
+    <title>iDoctor</title>
   </head>
   <body>
     <div id="app"></div>
