--- a/iDoctor_vue/index.html
+++ b/iDoctor_vue/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="app"></div>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.js"></script>
   </body>
